chging bg color

--- a/eat/public/index.html
+++ b/eat/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-<title>Abj inter</title>
+    <title>Best 5-Star Hotel in Abuja Nigeria | Abuja Continental</title>
 
 <!-- Stylesheets -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
